# mining-maintenance-agent

mining-maintenance-agent/: .env  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  scenario.txt  test_agent1.py  test_agent2.py  test_agent3.py  test_agent4.py  test_pipeline.py
mining-maintenance-agent/agents/: diagnosis_agent.py  inventory_agent.py  jobcard_agent.py  oem_agent.py  pipeline.py
mining-maintenance-agent/data/: inventory.json  oem_specs.json
