[project]
name = "mining-maintenance-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.14.2",
    "langchain>=1.3.1",
    "langchain-google-genai>=4.2.3",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.1",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "unstructured>=0.22.31",
]
